--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hono/zod-validator": "^0.7.3",
     "@prisma/client": "^6.16.2",
     "hono": "^4.9.9",
+    "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
