--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@getmocha/users-service": "^0.0.4",
     "@hono/zod-validator": "^0.7.3",
     "@prisma/client": "^6.16.2",
+    "@types/react-router-dom": "^5.3.3",
     "hono": "^4.9.9",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-router-dom": "^7.9.3",
     "zod": "^4.1.11"
   },
   "devDependencies": {
