--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-router-dom": "^7.9.3",
+    "recharts": "^3.2.1",
     "zod": "^4.1.11"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "@types/node": "^20.19.18",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/recharts": "^1.8.29",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "prisma": "^6.16.2",
